// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <LocationTableWrapper /> 1`] = `
<div
  className="MuiPaper-root MUIDataTable-paper-2 undefined MuiPaper-elevation4 MuiPaper-rounded"
>
  <div
    aria-label="Table Toolbar"
    className="MuiToolbar-root MuiToolbar-regular MUIDataTableToolbar-root-13 MuiToolbar-gutters"
    role="toolbar"
  >
    <div
      className="MUIDataTableToolbar-left-15"
    >
      <div
        aria-hidden="true"
        className="MUIDataTableToolbar-titleRoot-19"
      >
        <h6
          className="MuiTypography-root MUIDataTableToolbar-titleText-20 MuiTypography-h6"
        >
           (0)
        </h6>
      </div>
    </div>
    <div
      className="MUIDataTableToolbar-actions-17"
    >
      <button
        aria-describedby={null}
        aria-label="Search"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Search-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Search"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-describedby={null}
        aria-label="Download CSV"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Download CSV-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Download CSV"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span>
        <span>
          <button
            aria-describedby={null}
            aria-label="Print"
            className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
            data-testid="Print-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            title="Print"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </span>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="View Columns"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="View Columns-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="View Columns"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="Filter Table"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="Filter Table-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Filter Table"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
  </div>
  <div
    className="MUIDataTableFilterList-root-28"
  />
  <div
    className="MUIDataTable-responsiveBase-5"
    style={
      Object {
        "height": "auto",
        "position": "relative",
      }
    }
  >
    <table
      className="MuiTable-root MUIDataTable-tableRoot-4"
      role="grid"
      tabIndex="0"
    >
      <caption
        className="MUIDataTable-caption-11"
      >
         (0)
      </caption>
      <thead
        className="MuiTableHead-root MUIDataTableHead-responsiveStacked-31 MUIDataTableHead-main-30"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableHeadRow-root-34 MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={0}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-0"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Name
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={1}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-1"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Street
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={2}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-2"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Postal Code
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={3}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-3"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Vegan
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={4}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-4"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Review
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableBodyRow-root-63 undefined MUIDataTableBodyRow-responsiveStacked-65 MuiTableRow-hover"
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78 datatables-noprint"
            colSpan={5}
            data-colindex={0}
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72 datatables-noprint"
            />
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72 datatables-noprint"
            >
              <div
                className="MuiTypography-root MUIDataTableBody-emptyTitle-60 MuiTypography-body1"
              >
                Sorry, no matching records found
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    aria-live="polite"
    className="MUIDataTable-liveAnnounce-12"
  />
</div>
`;

exports[`render <LocationTableWrapper /> 2`] = `
<div
  className="MuiPaper-root MUIDataTable-paper-2 undefined MuiPaper-elevation4 MuiPaper-rounded"
>
  <div
    aria-label="Table Toolbar"
    className="MuiToolbar-root MuiToolbar-regular MUIDataTableToolbar-root-13 MuiToolbar-gutters"
    role="toolbar"
  >
    <div
      className="MUIDataTableToolbar-left-15"
    >
      <div
        aria-hidden="true"
        className="MUIDataTableToolbar-titleRoot-19"
      >
        <h6
          className="MuiTypography-root MUIDataTableToolbar-titleText-20 MuiTypography-h6"
        >
          TestTable (0)
        </h6>
      </div>
    </div>
    <div
      className="MUIDataTableToolbar-actions-17"
    >
      <button
        aria-describedby={null}
        aria-label="Search"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Search-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Search"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-describedby={null}
        aria-label="Download CSV"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Download CSV-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Download CSV"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span>
        <span>
          <button
            aria-describedby={null}
            aria-label="Print"
            className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
            data-testid="Print-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            title="Print"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </span>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="View Columns"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="View Columns-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="View Columns"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="Filter Table"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="Filter Table-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Filter Table"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
  </div>
  <div
    className="MUIDataTableFilterList-root-28"
  />
  <div
    className="MUIDataTable-responsiveBase-5"
    style={
      Object {
        "height": "auto",
        "position": "relative",
      }
    }
  >
    <table
      className="MuiTable-root MUIDataTable-tableRoot-4"
      role="grid"
      tabIndex="0"
    >
      <caption
        className="MUIDataTable-caption-11"
      >
        TestTable (0)
      </caption>
      <thead
        className="MuiTableHead-root MUIDataTableHead-responsiveStacked-31 MUIDataTableHead-main-30"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableHeadRow-root-34 MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={0}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-0"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Name
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={1}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-1"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Street
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={2}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-2"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Postal Code
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={3}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-3"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Vegan
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={4}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-4"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Review
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableBodyRow-root-63 undefined MUIDataTableBodyRow-responsiveStacked-65 MUIDataTableBody-lastStackedCell-61 MuiTableRow-hover"
          data-testid="MUIDataTableBodyRow-0"
          id="MUIDataTableBodyRow-0"
          onClick={[Function]}
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={0}
            data-testid="MuiDataTableBodyCell-0-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Name
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              TestName
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={1}
            data-testid="MuiDataTableBodyCell-1-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Street
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            />
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={2}
            data-testid="MuiDataTableBodyCell-2-0"
          >
            <div
              className="lastColumn MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Postal Code
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              12345
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={3}
            data-testid="MuiDataTableBodyCell-3-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Vegan
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              Vegan
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={4}
            data-testid="MuiDataTableBodyCell-4-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Review
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    aria-live="polite"
    className="MUIDataTable-liveAnnounce-12"
  />
</div>
`;

exports[`render <LocationTableWrapper /> 3`] = `
<div
  className="MuiPaper-root MUIDataTable-paper-2 undefined MuiPaper-elevation4 MuiPaper-rounded"
>
  <div
    aria-label="Table Toolbar"
    className="MuiToolbar-root MuiToolbar-regular MUIDataTableToolbar-root-13 MuiToolbar-gutters"
    role="toolbar"
  >
    <div
      className="MUIDataTableToolbar-left-15"
    >
      <div
        aria-hidden="true"
        className="MUIDataTableToolbar-titleRoot-19"
      >
        <h6
          className="MuiTypography-root MUIDataTableToolbar-titleText-20 MuiTypography-h6"
        >
          TestTable (0)
        </h6>
      </div>
    </div>
    <div
      className="MUIDataTableToolbar-actions-17"
    >
      <button
        aria-describedby={null}
        aria-label="Search"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Search-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Search"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-describedby={null}
        aria-label="Download CSV"
        className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
        data-testid="Download CSV-iconButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        title="Download CSV"
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <span>
        <span>
          <button
            aria-describedby={null}
            aria-label="Print"
            className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
            data-testid="Print-iconButton"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            title="Print"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </span>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="View Columns"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="View Columns-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="View Columns"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
      <span
        onClick={[Function]}
      >
        <button
          aria-describedby={null}
          aria-label="Filter Table"
          className="MuiButtonBase-root MuiIconButton-root MUIDataTableToolbar-icon-22"
          data-testid="Filter Table-iconButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Filter Table"
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
  </div>
  <div
    className="MUIDataTableFilterList-root-28"
  />
  <div
    className="MUIDataTable-responsiveBase-5"
    style={
      Object {
        "height": "auto",
        "position": "relative",
      }
    }
  >
    <table
      className="MuiTable-root MUIDataTable-tableRoot-4"
      role="grid"
      tabIndex="0"
    >
      <caption
        className="MUIDataTable-caption-11"
      >
        TestTable (0)
      </caption>
      <thead
        className="MuiTableHead-root MUIDataTableHead-responsiveStacked-31 MUIDataTableHead-main-30"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableHeadRow-root-34 MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={0}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-0"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Name
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={1}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-1"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Street
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={2}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-2"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Postal Code
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={3}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-3"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Vegan
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head MUIDataTableHeadCell-root-46 MUIDataTableHeadCell-fixedHeader-47"
            data-colindex={4}
            onMouseDown={[Function]}
            scope="col"
          >
            <span
              className="MUIDataTableHeadCell-contentWrapper-56"
            >
              <button
                aria-describedby={null}
                className="MuiButtonBase-root MuiButton-root MuiButton-text MUIDataTableHeadCell-toolButton-55"
                data-testid="headcol-4"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                title="Sort"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <div
                    className="MUIDataTableHeadCell-sortAction-51"
                  >
                    <div
                      className="MUIDataTableHeadCell-data-50"
                    >
                      Review
                    </div>
                    <div
                      className="MUIDataTableHeadCell-sortAction-51"
                    >
                      <span
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiTableSortLabel-root MUIDataTableHeadCell-sortLabelRoot-53"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        role="button"
                        tabIndex={-1}
                      />
                    </div>
                  </div>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MUIDataTableBodyRow-root-63 undefined MUIDataTableBodyRow-responsiveStacked-65 MUIDataTableBody-lastStackedCell-61 MuiTableRow-hover"
          data-testid="MUIDataTableBodyRow-0"
          id="MUIDataTableBodyRow-0"
          onClick={[Function]}
          role={null}
        >
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={0}
            data-testid="MuiDataTableBodyCell-0-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Name
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              TestName
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={1}
            data-testid="MuiDataTableBodyCell-1-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Street
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            />
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={2}
            data-testid="MuiDataTableBodyCell-2-0"
          >
            <div
              className="lastColumn MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Postal Code
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              12345
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={3}
            data-testid="MuiDataTableBodyCell-3-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Vegan
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              Vegan
            </div>
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedParent-74 MUIDataTableBodyCell-responsiveStackedSmallParent-78"
            data-colindex={4}
            data-testid="MuiDataTableBodyCell-4-0"
          >
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-cellHide-68 MUIDataTableBodyCell-stackedHeader-71 MUIDataTableBodyCell-stackedCommon-72"
            >
              Review
            </div>
            <div
              className="MUIDataTableBodyCell-root-67 MUIDataTableBodyCell-stackedCommon-72"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    aria-live="polite"
    className="MUIDataTable-liveAnnounce-12"
  />
</div>
`;
